istio/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: excalidraw-gateway
  namespace: excalidraw
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "excalidraw.bhavyasachdeva.in"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: PASSTHROUGH
        credentialName: excalidraw-tls
      hosts:
        - "excalidraw.bhavyasachdeva.in"
