istio/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: excalidraw
  namespace: excalidraw
spec:
  hosts:
    - "excalidraw.bhavyasachdeva.in"
  gateways:
    - excalidraw/excalidraw-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: excalidraw-main.excalidraw.svc.cluster.local
            port:
              number: 80
